Terraform/config/sample-app/store-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store
  namespace: demo-gw
  labels:
    app: store
spec:
  replicas: 3
  selector:
    matchLabels:
      app: store
  template:
    metadata:
      labels:
        app: store
        version: v1
    spec:
      containers:
      - name: whereami
        image: gcr.io/google-samples/whereami:v1.2.1
        ports:
        - containerPort: 8080
